# advent_of_code_2020

./: .gitignore  Makefile  README.md  benchmark.py  readme_generator.py
Day1-9/: 1.hs  1.py  2.py  3.py  4.py  5.py  6.hs  6.py  7.py  8.py  9.py
Day1-9/day1/src/: main.rs
Day1-9/day1_rs/: Cargo.toml
Day1-9/day1_rs/src/: main.rs
Day1-9/day2/: Cargo.toml
Day1-9/day2_rs/: Cargo.toml
Day1-9/day2_rs/src/: main.rs
Day1-9/day3_rs/: Cargo.toml
Day1-9/day3_rs/src/: main.rs
Day1-9/day4_rs/: Cargo.toml
Day1-9/day4_rs/src/: main.rs
Day1-9/day5_rs/: Cargo.toml
Day1-9/day5_rs/src/: main.rs
Day1-9/day6_rs/: Cargo.toml
Day1-9/day6_rs/src/: main.rs
Day1-9/day7_rs/: Cargo.toml
Day1-9/day7_rs/src/: main.rs
Day1-9/day8_rs/: Cargo.toml
Day1-9/day8_rs/src/: main.rs
Day1-9/day9_rs/: Cargo.toml
Day1-9/day9_rs/src/: main.rs
Day10-19/: 10.py  11.py  12.py  13.py  15.py  16.py  17.py  18.py  19.py
Day10-19/day10_rs/: Cargo.toml
Day10-19/day10_rs/src/: main.rs
Day10-19/day11_rs/: Cargo.toml
Day10-19/day11_rs/src/: main.rs
Day10-19/day12_rs/: Cargo.toml
Day10-19/day12_rs/src/: main.rs
Day10-19/day13_rs/: Cargo.toml
Day10-19/day14_rs/: Cargo.toml
Day10-19/day15_rs/: Cargo.toml
Day10-19/day16_rs/: Cargo.toml
Day10-19/day17_rs/: Cargo.toml
Day10-19/day18_rs/: Cargo.toml
Day20-25/: 21.py  22.py  23.py  24.py  25.py
Day20-25/day20_rs/: Cargo.toml
Day20-25/day21_rs/: Cargo.toml
Day20-25/day22_rs/: Cargo.toml
Day20-25/day23_rs/: Cargo.toml
Day20-25/day24_rs/: Cargo.toml
Day20-25/day25_rs/: Cargo.toml
(+12 files in other folders)
