[package]
name = "day4_rs"
version = "0.1.0"
authors = ["Benjamin Congdon <bencongdon96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.20"
strum_macros = "0.20"
regex = "1"
lazy_static = "1.4.0"

